# zernike

./: .gitignore  README.md  main.py  pyproject.toml  test_datos.csv
c_impl/: Makefile  zernike_resultados.csv
c_impl/include/: data_gen.h  matriz.h  zernike.h  zernike_algo.h
c_impl/src/: data_gen.c  main.c  matriz.c  tui_main.c  zernike.c  zernike_algo.c
lib/: __init__.py  io.py  matriz.py  visualizacion.py  zernike.py
